[Feat,Fix] for, foreach 대신 stream 사용 - #1